# Os4ML

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPYRIGHT  DEVELOPERS.md  README.md  package-lock.json  pyproject.toml  renovate.json
services/job-manager/: .dockerignore  Dockerfile  README.md  openapi.sh  pyproject.toml
services/job-manager/oas/: distribute_oas.sh  job-manager-oas.yaml  model-manager-oas.yaml  objectstore-manager-oas.yaml  shared-oas.yaml
services/job-manager/src/: .gitignore  .openapi-generator-ignore  __init__.py  main.py
services/job-manager/tests/: conftest.py  test_artifact_api.py  test_experiment_api.py  test_jobmanager_api.py  test_pipeline_api.py  test_run_api.py
services/model-manager/: .gitignore  Dockerfile  README.md  gunicorn_conf.py  main.py  openapi.sh  pyproject.toml
services/model-manager/oas/: distribute_oas.sh  job-manager-oas.yaml  model-manager-oas.yaml  shared-oas.yaml  workflow-translator-oas.yaml
services/model-manager/src/: main.py  websocket_router.py
services/model-manager/tests/: conftest.py
services/objectstore-manager/: .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn_conf.py  oas.sh  openapi.sh  pyproject.toml
services/objectstore-manager/oas/: job-manager-oas.yaml  model-manager-oas.yaml  objectstore-manager-oas.yaml  shared-oas.yaml  workflow-translator-oas.yaml
services/objectstore-manager/src/: .gitignore  __init__.py  main.py
services/objectstore-manager/tests/: conftest.py
services/workflow-translator/: .gitignore  .openapi-generator-ignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  openapi.sh  pyproject.toml
services/workflow-translator/oas/: job-manager-oas.yaml  model-manager-oas.yaml  shared-oas.yaml
services/workflow-translator/src/: main.py
services/workflow-translator/tests/: conftest.py
templates/: .dockerignore  .gitignore  .openapi-generator-ignore  Dockerfile  README.md  build-and-push-dockerfiles.sh  build_all_components.py  build_all_pipelines.py  oas.sh  openapi.sh  pyproject.toml
templates/components/: images.py  util.py
templates/components/create-databag/: component.yaml  main.py  new.py
templates/components/create-dataframe/: component.yaml  main.py  test.py
templates/components/create_databag/: main.py
templates/components/create_dataframe/: main.py
templates/components/create_prediction_template/: main.py
templates/components/download-dataset-from-objectstore/: component.yaml  main.py  requirements.txt
templates/components/download-from-objectstore/: component.yaml  main.py
templates/components/execute_dataframe_script/: main.py
templates/components/get-databag/: component.yaml  main.py  new.py
templates/components/get-metrics/: component.yaml  main.py  new.py
templates/components/get_databag/: main.py
templates/components/get_dataset/: main.py
templates/components/get_file_and_dataset_type/: main.py
templates/components/get_file_type/: main.py
templates/components/get_metrics/: main.py
templates/components/init-databag/: component.yaml  main.py  new.py  test.py
templates/components/init_databag/: main.py
templates/components/init_empty_databag/: main.py
templates/components/katib-solver/: component.yaml  main.py
templates/components/katib_solver/: main.py
templates/components/load_databag_and_dataframe/: main.py
templates/components/load_model/: main.py
templates/components/load_prediction_data/: main.py
templates/components/ludwig-solver/: component.yaml  main.py  new.py  test.py
templates/components/ludwig_solver/: component.yaml  main.py  test.py
templates/components/mock-metric/: component.yaml  main.py
templates/components/predict/: main.py
templates/components/preprocess-data/: component.yaml  main.py
templates/components/preprocess_data/: main.py  requirements.txt
templates/components/return_string/: main.py
templates/components/sniff-column-datatypes/: component.yaml  main.py
templates/components/sniff-datatypes/: component.yaml  main.py  test.py
templates/components/sniff_datatypes/: component.yaml  main.py  test.py
templates/components/sniffle-dataset/: component.yaml  main.py  new.py  test.py
templates/components/sniffle_dataset/: main.py
templates/components/train-random-forest/: component.yaml  main.py
templates/components/train_random_forest/: main.py  requirements.txt
templates/components/update-databag-status/: component.yaml  main.py
templates/components/update-status/: component.yaml  main.py  new.py
templates/components/update_databag_status/: main.py
templates/components/update_status/: main.py
templates/components/upload-metrics/: main.py
templates/components/upload-to-objectstore/: component.yaml  main.py
templates/components/upload_to_objectstore/: main.py
templates/dockerfiles/: build-and-push-dockerfiles.sh
templates/dockerfiles/component-base/: Dockerfile
templates/dockerfiles/enas-trial/: Dockerfile  ModelConstructor.py  README.md  RunTrial.py  op_library.py  requirements.txt
templates/dockerfiles/ludwig/: Dockerfile  pyproject.toml  requirements.txt
templates/dockerfiles/pandas/: Dockerfile  pyproject.toml  requirements.txt
templates/dockerfiles/python/: Dockerfile  pyproject.toml  requirements.txt
templates/oas/: job-manager-oas.yaml  model-manager-oas.yaml  objectstore-manager-oas.yaml  shared-oas.yaml
templates/oas/templates/: api.mustache
templates/oas/templates_client/: api.mustache
templates/pipelines/: .gitignore  build.py  util.py
templates/pipelines/condition_test/: main.py
templates/pipelines/create-dataframe-pipeline/: main.py  pipeline.yaml
templates/pipelines/databag/: main.py  metadata.json
templates/pipelines/download-and-ludwig-solver/: component.yaml  main.py  metadata.json  pipeline.yaml
templates/pipelines/download-and-sniff/: main.py  pipeline.yaml
templates/pipelines/download-and-sniff-and-upload/: main.py  pipeline.yaml
templates/pipelines/download-and-sniffle/: main.py  (+2 more)
templates/resources/: shepard_script.py
templates/src/: config.py
templates/tests/: test_util.py  util.py
(+1384 files in other folders)
