[tool.poetry]
name = "os4ml components"
version = "0.1.0"
description = ""
authors = ["Dennis Rall <dennis.rall@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kfp = "^1.8.11"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.7.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
