[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "os4ml components"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.8.11"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
coverage = { version = "^5.3", extras = ["toml"] }
pytest-mock = "^3.7.0"
pytest = "^7.0.1"
isort = { version = "^5.6.4", extras = ["pyproject"] }
black = "^22.3.0"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py310']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
