[tool.poetry]
name = "job-manager"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
kfp = "^1.8.11"
gunicorn = "^20.1.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = { version = "^5.3", extras = ["toml"] }
isort = { version = "^5.10.1", extras = ["pyproject"] }
requests = "^2.25.0"
black = "^22.3.0"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py37']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['src/build/openapi_client/*']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
