[tool.poetry]
name = "model-manager"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]
# packages = [{include = "model_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.86.0"}
fastapi-utils = "^0.2.1"
gunicorn = "^20.1.0"
python-dateutil = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
black = "^22.10.0"
isort = {extras = ["pyproject"], version = "^5.10.1"}
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-asyncio = "^0.19.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py37']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['src/build/*']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.mypy]
strict = true
exclude = 'src/build'
ignore_missing_imports = true
