[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "objectstore-manager"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
fastapi = {extras = ["all"], version = "^0.70.1"}
gunicorn = "^20.0.4"
nulltype = "^2.3.1"
python-dateutil = "^2.8.1"
urllib3 = "^1.26.3"
minio = "^7.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = { version = "^5.3", extras = ["toml"] }
isort = { version = "^5.6.4", extras = ["pyproject"] }
requests = "^2.25.0"
black = "19.10b0"
pytest-asyncio = "^0.14.0"

[tool.black]
# https://github.com/psf/black
line-length = 120
target_version = ['py37']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
