[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "objectstore-manager"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
google-cloud-storage = ">=2.4.0"
gunicorn = "^20.0.4"
nulltype = "^2.3.1"
python-dateutil = "^2.8.1"
urllib3 = "^1.26.3"
minio = "^7.1.2"
python-multipart = "^0.0.5"
fastapi-utils = "^0.2.1"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = { version = "^6.5.0", extras = ["toml"] }
isort = { version = "^5.6.4", extras = ["pyproject"] }
requests = "^2.25.0"
black = "^22.6.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.7.0"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py310']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['src/build/openapi_client/*']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
