[tool.poetry]
name = "workflow-translator"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
fastapi = {extras = ["all"], version = "^0.85.1"}
fastapi-utils = "^0.2.1"
kfp = "^1.8.14"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-asyncio = "^0.25.0"
coverage = { version = "^6.5.0", extras = ["toml"] }
isort = { version = "^5.10.1", extras = ["pyproject"] }
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py310']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['src/build/*']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
