[tool.poetry]
name = "os4ml-ludwig"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "os4ml_ludwig"}]

[tool.poetry.dependencies]
python = "~3.10"
kfp = "^1.8.21"
pandas = "^2.0.0"
ludwig = {git = "https://github.com/Dennis-Rall/ludwig.git", rev = "76188b680d0a9ef0b4195b81d6f4357aa1812646"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
